test_output_5.txt
Creating test database for alias 'default'...
Destroying test database for alias 'default'...
Found 7 test(s).
Traceback (most recent call last):
  File "/home/mauri/uni/antigravity/asistencias/asistencias.2/manage.py", line 11, in <module>
    main()
  File "/home/mauri/uni/antigravity/asistencias/asistencias.2/manage.py", line 8, in main
    execute_from_command_line(sys.argv)
  File "/home/mauri/uni/antigravity/asistencias/asistencias.2/.venv/lib/python3.12/site-packages/django/core/management/__init__.py", line 443, in execute_from_command_line
    utility.execute()
  File "/home/mauri/uni/antigravity/asistencias/asistencias.2/.venv/lib/python3.12/site-packages/django/core/management/__init__.py", line 437, in execute
    self.fetch_command(subcommand).run_from_argv(self.argv)
  File "/home/mauri/uni/antigravity/asistencias/asistencias.2/.venv/lib/python3.12/site-packages/django/core/management/commands/test.py", line 24, in run_from_argv
    super().run_from_argv(argv)
  File "/home/mauri/uni/antigravity/asistencias/asistencias.2/.venv/lib/python3.12/site-packages/django/core/management/base.py", line 416, in run_from_argv
    self.execute(*args, **cmd_options)
  File "/home/mauri/uni/antigravity/asistencias/asistencias.2/.venv/lib/python3.12/site-packages/django/core/management/base.py", line 460, in execute
    output = self.handle(*args, **options)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/mauri/uni/antigravity/asistencias/asistencias.2/.venv/lib/python3.12/site-packages/django/core/management/commands/test.py", line 63, in handle
    failures = test_runner.run_tests(test_labels)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/mauri/uni/antigravity/asistencias/asistencias.2/.venv/lib/python3.12/site-packages/django/test/runner.py", line 1145, in run_tests
    self.run_checks(databases)
  File "/home/mauri/uni/antigravity/asistencias/asistencias.2/.venv/lib/python3.12/site-packages/django/test/runner.py", line 1067, in run_checks
    call_command("check", verbosity=self.verbosity, databases=databases)
  File "/home/mauri/uni/antigravity/asistencias/asistencias.2/.venv/lib/python3.12/site-packages/django/core/management/__init__.py", line 195, in call_command
    return command.execute(*args, **defaults)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/mauri/uni/antigravity/asistencias/asistencias.2/.venv/lib/python3.12/site-packages/django/core/management/base.py", line 460, in execute
    output = self.handle(*args, **options)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/mauri/uni/antigravity/asistencias/asistencias.2/.venv/lib/python3.12/site-packages/django/core/management/commands/check.py", line 81, in handle
    self.check(
  File "/home/mauri/uni/antigravity/asistencias/asistencias.2/.venv/lib/python3.12/site-packages/django/core/management/base.py", line 492, in check
    all_issues = checks.run_checks(
                 ^^^^^^^^^^^^^^^^^^
  File "/home/mauri/uni/antigravity/asistencias/asistencias.2/.venv/lib/python3.12/site-packages/django/core/checks/registry.py", line 89, in run_checks
    new_errors = check(app_configs=app_configs, databases=databases)
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/mauri/uni/antigravity/asistencias/asistencias.2/.venv/lib/python3.12/site-packages/django/core/checks/urls.py", line 136, in check_custom_error_handlers
    handler = resolver.resolve_error_handler(status_code)
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/mauri/uni/antigravity/asistencias/asistencias.2/.venv/lib/python3.12/site-packages/django/urls/resolvers.py", line 743, in resolve_error_handler
    callback = getattr(self.urlconf_module, "handler%s" % view_type, None)
                       ^^^^^^^^^^^^^^^^^^^
  File "/home/mauri/uni/antigravity/asistencias/asistencias.2/.venv/lib/python3.12/site-packages/django/utils/functional.py", line 47, in __get__
    res = instance.__dict__[self.name] = self.func(instance)
                                         ^^^^^^^^^^^^^^^^^^^
  File "/home/mauri/uni/antigravity/asistencias/asistencias.2/.venv/lib/python3.12/site-packages/django/urls/resolvers.py", line 722, in urlconf_module
    return import_module(self.urlconf_name)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.12/importlib/__init__.py", line 90, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1387, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1360, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1331, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 935, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 995, in exec_module
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "/home/mauri/uni/antigravity/asistencias/asistencias.2/diplomaturas/urls.py", line 9, in <module>
    path('', include('asistencias.urls', namespace='asistencias')), # el '' indica la ruta raiz, y include me permite incluir las urls definidas en la app asistencias
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/mauri/uni/antigravity/asistencias/asistencias.2/.venv/lib/python3.12/site-packages/django/urls/conf.py", line 39, in include
    urlconf_module = import_module(urlconf_module)
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.12/importlib/__init__.py", line 90, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1387, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1360, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1331, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 935, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 995, in exec_module
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "/home/mauri/uni/antigravity/asistencias/asistencias.2/asistencias/urls.py", line 2, in <module>
    from . import views 
    ^^^^^^^^^^^^^^^^^^^
  File "/home/mauri/uni/antigravity/asistencias/asistencias.2/asistencias/views/__init__.py", line 2, in <module>
    from .alumno import (
  File "/home/mauri/uni/antigravity/asistencias/asistencias.2/asistencias/views/alumno.py", line 76
    es_profe_de_esta = c.materia_id in materias_profe
    ^
IndentationError: expected an indented block after 'for' statement on line 75
